improved application design and set up mobile carousel

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -55,7 +55,7 @@
   },
   "feelsLike": "Feels like",
   "chanceOfRain": "Chance of Rain",
-  "wind": "Language",
+  "wind": "Wind",
   "directions": {
     "n": "N",
     "ne": "NE",
