redesigned settings, search and info tabs

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -76,7 +76,7 @@
     "last-quarter": "Последна Четвърт",
     "waning-crescent": "Залязващ Полумесец"
   },
-  "apparent": "Като",
+  "apparent": "Усеща се като",
 
   "settings": "Настройки",
   "language": "Език",
