add weather data and astrology data from backend

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -88,7 +88,7 @@
   "kmh": "км/ч",
   "ms": "м/с",
   "mph": "м/ч",
-  "knots": "възли",
+  "kn": "възли",
   "h": "ч",
   "m": "м",
   "search": "Търсене",
