--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -88,7 +88,7 @@
   "kmh": "km/h",
   "ms": "m/s",
   "mph": "mph",
-  "knots": "knots",
+  "kn": "knots",
   "h": "h",
   "m": "m",
   "search": "Search",
