--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -87,7 +87,7 @@
   "kmh": "km/h",
   "ms": "m/s",
   "mph": "mph",
-  "knots": "nudos",
+  "kn": "nudos",
   "h": "h",
   "m": "m",
   "search": "Buscar",
