minor design and functionality changes

--- a/frontend/src/locales/bg.json
+++ b/frontend/src/locales/bg.json
@@ -92,7 +92,7 @@
   "h": "ч",
   "m": "м",
   "search": "Търсене",
-  "location": "Локация",
+  "location": "Потърсете Локация...",
   
   "zodiacSigns": {
     "aries": "Овен",
