--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -92,7 +92,7 @@
   "h": "h",
   "m": "m",
   "search": "Search",
-  "location": "Location",
+  "location": "Search a Location...",
   
   "zodiacSigns": {
     "aries": "Aries",
