--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -91,7 +91,7 @@
   "h": "h",
   "m": "m",
   "search": "Buscar",
-  "location": "Ubicación",
+  "location": "Buscar una Ubicación...",
   
   "zodiacSigns": {
     "aries": "Aries",
